# templates

./: .gitignore  Cargo.toml  README.md
contracts/cw721-extension/: Cargo.toml
contracts/cw721-extension/src/: execute.rs  msg.rs  query.rs  state.rs
contracts/echo/: Cargo.toml
contracts/echo/examples/: schema.rs
contracts/echo/schema/: echo_response.json  execute_msg.json  query_msg.json  state.json
contracts/echo/src/: execute.rs  msg.rs  query.rs  state.rs
contracts/ibc-controller/: Cargo.toml
contracts/ibc-controller/examples/: schema.rs
contracts/ibc-controller/schema/: execute_msg.json
contracts/ibc-controller/src/: execute.rs  msg.rs  state.rs
contracts/ibc-dispatcher/: Cargo.toml
contracts/ibc-dispatcher/examples/: schema.rs
contracts/ibc-dispatcher/schema/: execute_msg.json  get_connections_response.json  ibc_execute_msg.json
contracts/ibc-dispatcher/src/: ack.rs  contract.rs  ibc.rs  ibc_ack.rs  ibc_msg.rs  ibc_receive.rs  msg.rs  state.rs  tests.rs
contracts/ibc-example/: README.md
contracts/ibc-example/examples/: schema.rs
contracts/ibc-example/schema/: execute_msg.json  ibc_execute_msg.json  query_msg.json
contracts/ibc-example/src/: ibc.rs  ibc_receive.rs
contracts/minimal/: Cargo.toml
contracts/minimal/examples/: schema.rs
devtools/: build_integration_wasm.sh
templates/ibc-example/: Cargo.toml  README.md
templates/ibc-example/examples/: schema.rs
templates/ibc-example/schema/: get_counter_response.json  ibc_ping_response.json  query_msg.json
templates/ibc-example/src/: ack.rs  contract.rs  ibc.rs  ibc_ack.rs  ibc_msg.rs  ibc_receive.rs  lib.rs  msg.rs  state.rs  tests.rs
templates/minimal/: Cargo.toml
tests/: .gitignore  README.md  package-lock.json  package.json
tests/internal/: ark_protocol_minimal.wasm  cw_ics721_bridge.wasm  ibc_example.wasm
tests/src/: controller.ts  cosmwasm.spec.ts  cw721-utils.ts  cw721_base.wasm  cw_ics721_bridge.wasm  ibc-dispatcher.spec.ts  ics721.spec.ts  utils.ts
(+5 files in other folders)
