[workspace]
members = ["templates/*"]

[profile.release.package.ibc-example]
codegen-units = 1
incremental = false

[profile.release.package.ark-protocol-minimal]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false