# (c) Ark Protocol 2022
# - ALL rights reserved.
# - No copies, disclosure or forward of all data or any info provided here or by the Ark Protocol team is allowed!
# - In case of any doubt contact Ark Protocol on Discord or Twitter.

[package]
name = "cw721-extension"
version = "0.1.0"
authors = ["taitruong", "art3mix", "tottruong"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.1.0"
# cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.14.0"
cw2 = "0.14.0"
cw721 = "0.13.4"
cw721-base = "0.13.4"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.34" }

[dev-dependencies]
cosmwasm-schema = "1.1.0"
# cw-multi-test = "0.14.0"